--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start:dev": "nest start --watch",
     "start:dev:user": "nest start user-service --watch",
     "start:dev:order": "nest start order-service --watch",
+    "start:dev:document": "nest start document-service --watch",
     "start:dev:gateway": "nest start gateway --watch",
     "start:debug": "nest start --debug --watch",
     "start:debug:user": "nest start user-service --debug --watch",
@@ -33,16 +34,18 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
-    "@nestjs/config": "^3.3.0",
-    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/microservices": "^10.1.2",
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express": "^4.21.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -50,8 +53,10 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.16.14",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "concurrently": "^9.0.1",
